tests/failing/tuple_struct_test.stderr
error: proc-macro derive panicked
 --> tests/failing/tuple_struct_test.rs:3:10
  |
3 | #[derive(Entity)]
  |          ^^^^^^
  |
  = help: message: Failed to derive Entity: TokenStream [Punct { ch: ':', spacing: Joint, span: #0 bytes(34..40) }, Punct { ch: ':', spacing: Alone, span: #0 bytes(34..40) }, Ident { ident: "core", span: #0 bytes(34..40) }, Punct { ch: ':', spacing: Joint, span: #0 bytes(34..40) }, Punct { ch: ':', spacing: Alone, span: #0 bytes(34..40) }, Ident { ident: "compile_error", span: #0 bytes(34..40) }, Punct { ch: '!', spacing: Alone, span: #0 bytes(34..40) }, Group { delimiter: Brace, stream: TokenStream [Literal { kind: Str, symbol: "`#[derive(Entity)]` only supports structs with named columns.", suffix: None, span: #0 bytes(34..40) }], span: #0 bytes(34..40) }]
